@@ -10,6 +10,7 @@ dpkg (1.18.19) UNRELEASED; urgency=medium
   * Always set SOURCE_DATE_EPOCH in dpkg-buildpackage and dpkg-source. Use
     the current date if the changelog does not have one. Closes: #849081
   * Refactor update-alternatives pathname existence check into a new function.
+  * Avoid useless repeated lstat()s in update-alternatives.
   * Portability:
     - On GNU/Hurd try to use the new process executable name attribute from
       libps, to properly match on start-stop-daemon --exec.
